--- a/views/task.slim
+++ b/views/task.slim
@@ -1,12 +1,11 @@
-li id=task.id
+li.task id=task.id class=(task.completed_at.nil? ? "" : "completed")
   = task.name
   form.update action="/task/#{task.id}" method="POST"
     input type="hidden" name="_method" value="PUT"
-    - if task.completed_at.nil?
-      input type="submit" value="Complete Task" title="Complete Task"
-    - else
-      input type="submit" value="Uncomplete Task" title="Uncomplete Task"
-      
-  form action="task/#{task.id}" method="POST"
+    -if task.completed_at.nil?
+      input type="submit" value="  " title="Complete Task"
+    -else
+      input type="submit" value="✓" title="Uncomplete Task"
+  form.delete action="/task/#{task.id}" method="POST"
     input type="hidden" name="_method" value="DELETE"
-    input type="submit" value="Delete"
+    input type="submit" value="delete" title="Delete Task"
